--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -54,3 +54,4 @@ $box-shadow: 0 0 38px 10px rgba(49,71,168,0.12);
 $card-shadow: 0 0 38px 10px rgba(49,71,168,0.12);
 
 $light: #F6F7FF;
+$lightblue: #E8EEFF;
