--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,5 +1,6 @@
 /* Import the rest of Bulma */
 @import '../../node_modules/bulma';
+@import '../../node_modules/@creativebulma/bulma-badge';
 
 a {
   outline: 0;
