add notifications drawer

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -55,3 +55,7 @@ $card-shadow: 0 0 38px 10px rgba(49,71,168,0.12);
 
 $light: #F6F7FF;
 $lightblue: #E8EEFF;
+
+$drawer-divider: 2px solid $lightblue;
+$drawer-header-height: 63px;
+$drawer-shadow: -5px 0px 12px 0 rgba($primary, 0.10);
