--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,6 +1,7 @@
 /* Import the rest of Bulma */
 @import '../../node_modules/bulma';
 @import '../../node_modules/@creativebulma/bulma-badge';
+@import './drawer';
 
 a {
   outline: 0;
