custom login page

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -59,3 +59,5 @@ $lightblue: #E8EEFF;
 $drawer-divider: 2px solid $lightblue;
 $drawer-header-height: 63px;
 $drawer-shadow: -5px 0px 12px 0 rgba($primary, 0.10);
+
+$navbar-height: 3.9rem;
