add bulma-tooltip, import it (this time) and add it to the manual deposit page.

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,6 +1,7 @@
 /* Import the rest of Bulma */
 @import '../../node_modules/bulma';
 @import '../../node_modules/@creativebulma/bulma-badge';
+@import '../../node_modules/@creativebulma/bulma-tooltip';
 @import './drawer';
 
 a {
