Styling for deposit + withdraw page

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -150,3 +150,11 @@ a.box {
     z-index: 10;
   }
 }
+
+.blockchain-address {
+  font-family: monospace;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
