use dapp colors

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -50,6 +50,30 @@ $pieces-color: #999999;
 $dao-color: #d7ac00;
 $captions-color: #e06375;
 
+$network-color-invert: findColorInvert($network-color);
+$translate-color-invert: findColorInvert($translate-color);
+$force-color-invert: findColorInvert($force-color);
+$socials-color-invert: findColorInvert($socials-color);
+$pieces-color-invert: findColorInvert($pieces-color);
+$dao-color-invert: findColorInvert($dao-color);
+$captions-color-invert: findColorInvert($captions-color);
+
+$network-color-light: findLightColor($network-color);
+$translate-color-light: findLightColor($translate-color);
+$force-color-light: findLightColor($force-color);
+$socials-color-light: findLightColor($socials-color);
+$pieces-color-light: findLightColor($pieces-color);
+$dao-color-light: findLightColor($dao-color);
+$captions-color-light: findLightColor($captions-color);
+
+$network-color-dark: findDarkColor($network-color);
+$translate-color-dark: findDarkColor($translate-color);
+$force-color-dark: findDarkColor($force-color);
+$socials-color-dark: findDarkColor($socials-color);
+$pieces-color-dark: findDarkColor($pieces-color);
+$dao-color-dark: findDarkColor($dao-color);
+$captions-color-dark: findDarkColor($captions-color);
+
 //$box-shadow: 0 0 38px 10px rgba(49,71,168,0.12);
 //$box-link-hover-shadow: 0 0 38px 10px rgba($link,0.12);
 //$box-link-active-shadow:  0 0 38px 10px rgba($link,0.12);
@@ -68,3 +92,15 @@ $drawer-shadow: -5px 0px 12px 0 rgba($primary, 0.10);
 $navbar-height: 3.9rem;
 
 $control-border-width: 2px;
+
+@import "~bulma/sass/utilities/derived-variables";
+$effectColors: (
+  "dao": ($dao-color, $dao-color-invert, $dao-color-light, $dao-color-dark),
+  "translate": ($translate-color, $translate-color-invert, $translate-color-light, $translate-color-dark),
+  "force": ($force-color, $force-color-invert, $force-color-light, $force-color-dark),
+  "socials": ($socials-color, $socials-color-invert, $socials-color-light, $socials-color-dark),
+  "pieces": ($pieces-color, $pieces-color-invert, $pieces-color-light, $pieces-color-dark),
+  "captions": ($captions-color, $captions-color-invert, $captions-color-light, $captions-color-dark),
+  "network": ($network-color, $network-color-invert, $network-color-light, $network-color-dark)
+);
+$colors: map-merge($colors, $effectColors);
