show campaigns instead of batches

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -221,3 +221,12 @@ a.box {
     box-shadow: 0 0 0 0 rgba(51, 217, 178, 0);
   }
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.5s;
+}
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
