add pagination campaigns

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -246,3 +246,7 @@ a.box {
 .page-leave-to {
   opacity: 0;
 }
+
+.pagination-previous[disabled], .pagination-next[disabled], .pagination-link[disabled] {
+  pointer-events: none;
+}
