--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -77,7 +77,7 @@ $captions-color-dark: findDarkColor($captions-color);
 //$box-shadow: 0 0 38px 10px rgba(49,71,168,0.12);
 //$box-link-hover-shadow: 0 0 38px 10px rgba($link,0.12);
 //$box-link-active-shadow:  0 0 38px 10px rgba($link,0.12);
-$box-shadow: 0 5px 10px 0 rgba(31,41,51,0.1);
+$box-shadow: 0px 2px 20px rgba(129, 136, 157, 0.4);
 $box-link-hover-shadow: 0 5px 10px 0 rgba($link,0.1);
 $box-link-active-shadow: 0 5px 10px 0 rgba($link,0.1);
 $card-shadow: 0 0 38px 10px rgba(49,71,168,0.12);
