Add background color to box element

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -49,6 +49,7 @@ $socials-color: #06c6c6;
 $pieces-color: #999999;
 $dao-color: #d7ac00;
 $captions-color: #e06375;
+$balance-box-color: #F7FBFF;
 
 $network-color-invert: findColorInvert($network-color);
 $translate-color-invert: findColorInvert($translate-color);
