--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -337,4 +337,7 @@ a.box {
   .is-marginless-left-mobile {
     margin-left : 0 !important;
   }
+  .no-float-mobile {
+    float: none !important;
+  }
 }
