--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -13,11 +13,23 @@ hr {
   background-color: #E8EEFF;
 }
 
-h4.title {
-  font-weight: $title-weight;
-  // font-family: $title-family;
+.title {
   font-family: $title-family;
   color: $title-color;
+}
+
+h1.title {
+  font-weight: $title-weight;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 130%;
+}
+
+h2.title {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .has-limited-width {
