fix responsive tabs

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -364,3 +364,13 @@ a.box {
     float: none !important;
   }
 }
+
+@include mobile {
+  .campaign-tabs ul {
+    flex-direction: column;
+
+    li {
+      width: 100%;
+    }
+  }
+}
