--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -364,7 +364,9 @@ a.box {
     float: none !important;
   }
 }
-
+.campaign-tabs { 
+  overflow-x: hidden;
+} 
 @include mobile {
   .campaign-tabs ul {
     flex-direction: column;
