--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -3,6 +3,7 @@
 @import '../../node_modules/@creativebulma/bulma-badge';
 @import '../../node_modules/@creativebulma/bulma-tooltip';
 @import './drawer';
+@import '../../node_modules/bulma-switch/dist/css/bulma-switch.min.css';
 
 a {
   outline: 0;
@@ -364,9 +365,9 @@ a.box {
     float: none !important;
   }
 }
-.campaign-tabs { 
+.campaign-tabs {
   overflow-x: hidden;
-} 
+}
 @include mobile {
   .campaign-tabs ul {
     flex-direction: column;
