--- a/assets/scss/force-defaults.scss
+++ b/assets/scss/force-defaults.scss
@@ -1,5 +1,5 @@
 @import '../../node_modules/bulma';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import 'variables.scss';
 
 * {
   font-family: $family-sans-serif;
