implement design for welcome landing page

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -35,6 +35,10 @@ h2.title {
   width: 670px;
   max-width: 100%;
 }
+.has-limited-width-small {
+  width: 500px;
+  max-width: 100%;
+}
 .is-horizontal-centered {
   margin-left: auto;
   margin-right: auto;
