--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -291,7 +291,7 @@ a.box {
 
 .page-enter-active,
 .page-leave-active {
-  transition: opacity 0.5s;
+  transition: opacity 0.3s;
 }
 .page-enter,
 .page-leave-to {
@@ -391,3 +391,31 @@ a.box {
     }
   }
 }
+
+  .loading-text {
+    padding-right: 0.5em;
+      &:after {
+      content: '.';
+      animation: dots 1.2s steps(5, end) infinite;
+      }
+  }
+
+@keyframes dots {
+  0%, 20% {
+    color: rgba(0,0,0,0);
+    text-shadow:
+      .25em 0 0 rgba(0,0,0,0),
+      .5em 0 0 rgba(0,0,0,0);}
+  40% {
+    color: $text;
+    text-shadow:
+      .25em 0 0 rgba(0,0,0,0),
+      .5em 0 0 rgba(0,0,0,0);}
+  60% {
+    text-shadow:
+      .25em 0 0 $text,
+      .5em 0 0 rgba(0,0,0,0);}
+  80%, 100% {
+    text-shadow:
+      .25em 0 0 $text,
+      .5em 0 0 $text;}}
