--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -48,7 +48,7 @@ $translate-color: #00c165;
 $annotations-color: #00c165;
 $force-color: #057cff;
 $socials-color: #06c6c6;
-$qualifiers-color: #999999;
+$qualifier-color: #999999;
 $dao-color: #d7ac00;
 $captions-color: #e06375;
 $balance-box-color: #F7FBFF;
@@ -58,7 +58,7 @@ $translate-color-invert: findColorInvert($translate-color);
 $annotations-color-invert: findColorInvert($annotations-color);
 $force-color-invert: findColorInvert($force-color);
 $socials-color-invert: findColorInvert($socials-color);
-$qualifiers-color-invert: findColorInvert($qualifiers-color);
+$qualifier-color-invert: findColorInvert($qualifier-color);
 $dao-color-invert: findColorInvert($dao-color);
 $captions-color-invert: findColorInvert($captions-color);
 
@@ -67,7 +67,7 @@ $translate-color-light: findLightColor($translate-color);
 $annotations-color-light: findLightColor($annotations-color);
 $force-color-light: findLightColor($force-color);
 $socials-color-light: findLightColor($socials-color);
-$qualifiers-color-light: findLightColor($qualifiers-color);
+$qualifier-color-light: findLightColor($qualifier-color);
 $dao-color-light: findLightColor($dao-color);
 $captions-color-light: findLightColor($captions-color);
 
@@ -76,7 +76,7 @@ $translate-color-dark: findDarkColor($translate-color);
 $annotations-color-dark: findDarkColor($annotations-color);
 $force-color-dark: findDarkColor($force-color);
 $socials-color-dark: findDarkColor($socials-color);
-$qualifiers-color-dark: findDarkColor($qualifiers-color);
+$qualifier-color-dark: findDarkColor($qualifier-color);
 $dao-color-dark: findDarkColor($dao-color);
 $captions-color-dark: findDarkColor($captions-color);
 
@@ -106,7 +106,7 @@ $effectColors: (
   "annotations": ($annotations-color, $annotations-color-invert, $annotations-color-light, $annotations-color-dark),
   "force": ($force-color, $force-color-invert, $force-color-light, $force-color-dark),
   "socials": ($socials-color, $socials-color-invert, $socials-color-light, $socials-color-dark),
-  "qualifiers": ($qualifiers-color, $qualifiers-color-invert, $qualifiers-color-light, $qualifiers-color-dark),
+  "qualifier": ($qualifier-color, $qualifier-color-invert, $qualifier-color-light, $qualifier-color-dark),
   "captions": ($captions-color, $captions-color-invert, $captions-color-light, $captions-color-dark),
   "network": ($network-color, $network-color-invert, $network-color-light, $network-color-dark)
 );
