fix qualification index page

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -437,3 +437,15 @@ a.box {
     }
   }
 }
+
+.information-block {
+  border: 1px solid #E8EEFF;
+  border-radius: 8px;
+  .block {
+    margin-bottom: 10px
+  }
+
+  .information-header {
+    background: #F7FBFF;
+  }
+}
