--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -5,6 +5,7 @@
 @import './drawer';
 @import '../../node_modules/bulma-switch/dist/css/bulma-switch.min.css';
 @import '../../node_modules/vue-multiselect/dist/vue-multiselect.min.css';
+@import '../../node_modules/bulma-checkbox/css/main.min.css';
 
 a {
   outline: 0;
