Change pink scheme to yellow gold

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,7 +8,7 @@
     --c-dark-silver: #3e3e3e;
     --c-border: hsla(0, 0%, 0%, 0.2);
 
-    --c-pink-1: pink;
+    --c-pink-1: #ffc627;
 
     --fontColor: hsla(0, 0%, 0%, 0.8);
     --fontColor-light: #fff;
