--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -100,7 +100,7 @@ tr:nth-child(even) {
   width: 100%;
 
   max-width: 1200px;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
   margin: 0 auto;
 }
 
@@ -115,6 +115,20 @@ dialog {
   border-radius: 5px;
 }
 
+.backdrop-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-size: 24px;
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+}
+
 dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -122,7 +136,6 @@ dialog::backdrop {
 /* Content Styling */
 
 .title {
-  margin-bottom: 1rem;
   font-family: var(--font-family-header);
   font-size: var(--font-size-xl);
   color: var(--primary-color);
