disallow start task when not logged in

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -94,6 +94,11 @@ tr:nth-child(even) {
   background-color: var(--dark-color);
 }
 
+.button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 /* CONTAINER */
 
 .container {
