--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,12 +22,13 @@
   --font-family-body: "Arial", sans-serif;
   --font-family-header: "Inter", sans-serif;
 
-  --font-size: 1em;
   --font-size-sm: 0.8em;
+  --font-size: 1em;
   --font-size-lg: 1.25em;
   --font-size-xl: 1.75em;
   --font-size-2xl: 2em;
   --font-size-3xl: 3em;
+  --font-size-4xl: 4em;
 
   --line-height: 1.5;
 
@@ -49,6 +50,29 @@ html {
   font-family: var(--font-family-body);
   font-size: var(--font-size);
   color: var(--text-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-family-header);
+  font-weight: 400 !important;
+}
+
+h1 {
+  font-size: var(--font-size-4xl) !important;
+  line-height: 87px;
+}
+
+h2 {
+  font-size: var(--font-size-3xl);
+}
+
+h3 {
+  font-size: var(--font-size-2xl);
 }
 
 /* TABLE STYLING */
@@ -183,18 +207,28 @@ p {
   margin-bottom: 0;
 }
 
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-5 {
+  margin-top: 5rem;
+}
+
 /* Loader */
 
 .lds-ellipsis,
 .lds-ellipsis div {
   box-sizing: border-box;
 }
+
 .lds-ellipsis {
   position: relative;
   display: inline-block;
   width: 80px;
   height: 80px;
 }
+
 .lds-ellipsis div {
   position: absolute;
   top: 33.33333px;
@@ -204,42 +238,52 @@ p {
   border-radius: 50%;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
+
 .lds-ellipsis div:nth-child(1) {
   left: 8px;
   animation: lds-ellipsis1 0.6s infinite;
 }
+
 .lds-ellipsis div:nth-child(2) {
   left: 8px;
   animation: lds-ellipsis2 0.6s infinite;
 }
+
 .lds-ellipsis div:nth-child(3) {
   left: 32px;
   animation: lds-ellipsis2 0.6s infinite;
 }
+
 .lds-ellipsis div:nth-child(4) {
   left: 56px;
   animation: lds-ellipsis3 0.6s infinite;
 }
+
 @keyframes lds-ellipsis1 {
   0% {
     transform: scale(0);
   }
+
   100% {
     transform: scale(1);
   }
 }
+
 @keyframes lds-ellipsis3 {
   0% {
     transform: scale(1);
   }
+
   100% {
     transform: scale(0);
   }
 }
+
 @keyframes lds-ellipsis2 {
   0% {
     transform: translate(0, 0);
   }
+
   100% {
     transform: translate(24px, 0);
   }
@@ -249,12 +293,14 @@ p {
 .lds-ring div {
   box-sizing: border-box;
 }
+
 .lds-ring {
   position: relative;
   display: inline-block;
   width: 20px;
   height: 20px;
 }
+
 .lds-ring div {
   position: absolute;
   box-sizing: border-box;
@@ -267,20 +313,71 @@ p {
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
 }
+
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
 }
+
 .lds-ring div:nth-child(2) {
   animation-delay: -0.3s;
 }
+
 .lds-ring div:nth-child(3) {
   animation-delay: -0.15s;
 }
+
 @keyframes lds-ring {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
+}
+
+/* Dropdown */
+
+.dropbtn {
+  background-color: #3498db;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
 }
