--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -18,6 +18,7 @@
   --color-gray-100: #f8f9fa;
   --color-gray-200: #e9ecef;
   --color-gray-300: #dee2e6;
+  --color-gray-400: #ced4da;
 
   --font-family-body: "Arial", sans-serif;
   --font-family-header: "Inter", sans-serif;
@@ -211,6 +212,10 @@ p {
   margin-top: 1rem;
 }
 
+.mt-2 {
+  margin-top: 2rem;
+}
+
 .mt-5 {
   margin-top: 5rem;
 }
@@ -380,4 +385,13 @@ p {
 
 .show {
   display: block;
+}
+
+/* Form Styling */
+
+input {
+  padding: 0.5rem;
+  font-size: var(--font-size);
+  border: 1px solid var(--border-color);
+  height: 40px;
 }
