feat: add custom error page

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -190,6 +190,11 @@ p {
 
 /* Utility classes */
 
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
 .text-center {
   text-align: center;
 }
