add new design WIP

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,8 +1,13 @@
 @import url("normalize.css");
 
 @font-face {
-  font-family: "Inter";
+  font-family: "inter-regular";
   src: url("@/assets/fonts/Inter-Regular.ttf");
+}
+
+@font-face {
+  font-family: "inter-medium";
+  src: url("@/assets/fonts/Inter-Medium.ttf");
 }
 
 *,
@@ -20,8 +25,8 @@
   --color-gray-300: #dee2e6;
   --color-gray-400: #ced4da;
 
-  --font-family-body: "Arial", sans-serif;
-  --font-family-header: "Inter", sans-serif;
+  --font-family-body: "inter-regular", "Arial", sans-serif;
+  --font-family-header: "inter-medium", sans-serif;
 
   --font-size-sm: 0.8em;
   --font-size: 1em;
@@ -44,6 +49,8 @@
   --border-color: #dee2e6;
   --border-light-color: #f8f9fa;
   --border-dark-color: #343a40;
+
+  --sidebar-width: 18rem;
 }
 
 html {
@@ -51,6 +58,7 @@ html {
   font-family: var(--font-family-body);
   font-size: var(--font-size);
   color: var(--text-color);
+  background: #f3f3f3;
 }
 
 h1,
@@ -80,29 +88,43 @@ h3 {
 
 table {
   width: 100%;
-  border-collapse: collapse;
+  border-spacing: 0rem 0.25rem;
+  border-collapse: separate;
+  border: none;
 }
 
 .table-container {
   overflow-x: auto;
 }
 
-th,
 td {
-  padding: 8px;
+  padding: 18px 10px;
   text-align: left;
-  border: 1px solid var(--border-color);
 }
 
-th {
-  background-color: var(--bg-light-color);
+td:nth-child(1) {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
-tr:nth-child(even) {
-  background-color: var(--bg-light-color);
+td:nth-last-child(1) {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
-tr:hover {
+thead th {
+  padding-bottom: 0.5rem;
+
+  color: black;
+  text-align: left;
+}
+
+tbody tr {
+  background: white;
+  border-radius: 4px;
+}
+
+tbody tr:hover {
   cursor: pointer;
   background: var(--color-gray-200);
 }
@@ -132,10 +154,7 @@ tr:hover {
 
 .container {
   width: 100%;
-
   max-width: 1200px;
-  padding: 1rem 1rem;
-  margin: 0 auto;
 }
 
 /* MODAL */
@@ -349,12 +368,12 @@ p {
 /* Dropdown */
 
 .dropbtn {
-  background-color: #3498db;
-  color: white;
   padding: 16px;
   font-size: 16px;
-  border: none;
+  color: white;
   cursor: pointer;
+  background-color: #3498db;
+  border: none;
 }
 
 .dropbtn:hover,
@@ -368,20 +387,20 @@ p {
 }
 
 .dropdown-content {
-  display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  z-index: 1;
+  display: none;
   min-width: 160px;
   overflow: auto;
+  background-color: #f1f1f1;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
   display: block;
+  padding: 12px 16px;
+  color: black;
+  text-decoration: none;
 }
 
 .dropdown a:hover {
@@ -395,8 +414,8 @@ p {
 /* Form Styling */
 
 input {
+  height: 40px;
   padding: 0.5rem;
   font-size: var(--font-size);
   border: 1px solid var(--border-color);
-  height: 40px;
 }
